PR fixes - will be squashed before merging

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -96,7 +96,7 @@
           box-shadow: inset 0 4px 0 0 govuk-colour("light-blue");
 
           @include govuk-if-ie8 {
-            border-top: 4px solid govuk-colour("light-blue");
+            border-top-color: govuk-colour("light-blue");
           }
         }
 
@@ -121,23 +121,22 @@
 
           border-top: $top-border-width solid transparent;
           border-right: 1px solid $govuk-border-colour;
-          border-bottom: 1px solid transparent;
           border-left: 1px solid $govuk-border-colour;
 
-          color: govuk-colour("black");
+          color: $govuk-text-colour;
           background-color: govuk-colour("white");
-          box-shadow: inset 0 4px 0 0 govuk-colour("blue");
+          box-shadow: inset 0 4px 0 0 $govuk-link-colour;
           text-decoration: none;
 
           @include govuk-if-ie8 {
-            border-top: 4px solid govuk-colour("blue");
+            border-top-color: $govuk-link-colour;
           }
 
           &:focus {
-            box-shadow: inset 0 4px 0 0 govuk-colour("yellow"), inset 0 8px 0 0 govuk-colour("black");
+            box-shadow: inset 0 4px 0 0 $govuk-focus-colour, inset 0 8px 0 0 govuk-colour("black");
 
             @include govuk-if-ie8 {
-              border-top: 4px solid govuk-colour("black");
+              border-top-color: govuk-colour("black");
             }
           }
         }
